ci: run Scalar functional tests for PRs against features/*
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.github/workflows/scalar-functional-tests.yml
+++ b/.github/workflows/scalar-functional-tests.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ vfs-* ]
   pull_request:
-    branches: [ vfs-* ]
+    branches: [ vfs-*, features/* ]
 
 jobs:
   scalar:
