fixup! ci: run Scalar's Functional Tests
Apparently, there _might_ be left-over Git processes even outside of
using the built-in FSMonitor... (for example, see
https://github.com/microsoft/git/pull/366/checks?check_run_id=2786318460#step:19:20)

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/scalar-functional-tests.yml
+++ b/.github/workflows/scalar-functional-tests.yml
@@ -178,7 +178,7 @@ jobs:
           Scalar.FunctionalTests/$BUILD_FRAGMENT/Scalar.FunctionalTests$BUILD_FILE_EXT --test-scalar-on-path --test-git-on-path --timeout=300000 --full-suite
 
       - name: Force-stop FSMonitor daemons and Git processes (Windows)
-        if: runner.os == 'Windows' && matrix.features == 'experimental' && (success() || failure())
+        if: runner.os == 'Windows' && (success() || failure())
         shell: bash
         run: |
           set -x
