fixup! release: create initial Windows installer build workflow
Add HOME environment to fix code-signing on Windows build

--- a/.github/workflows/build-git-installers.yml
+++ b/.github/workflows/build-git-installers.yml
@@ -148,6 +148,8 @@ jobs:
   windows_artifacts:
     runs-on: windows-latest
     needs: [prereqs, windows_pkg]
+    env:
+      HOME: "${{github.workspace}}\\home"
     strategy:
       matrix:
         artifact:
