Enable scalar functional tests for 'bugfix/' branch

--- a/.github/workflows/scalar-functional-tests.yml
+++ b/.github/workflows/scalar-functional-tests.yml
@@ -8,7 +8,7 @@ env:
 
 on:
   push:
-    branches: [ vfs-* ]
+    branches: [ vfs-*, bugfix/* ]
   pull_request:
     branches: [ vfs-*, features/* ]
 
@@ -20,19 +20,19 @@ jobs:
       fail-fast: false
       matrix:
         # Order by runtime (in descending order)
-        os: [windows-2019, macos-10.15, ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
+        os: [macos-10.15] #, windows-2019, ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
         # Scalar.NET used to be tested using `features: [false, experimental]`
         # But currently, Scalar/C ignores `feature.scalar` altogether, so let's
         # save some electrons and run only one of them...
         features: [ignored]
-        exclude:
-          # The built-in FSMonitor is not (yet) supported on Linux
-          - os: ubuntu-16.04
-            features: experimental
-          - os: ubuntu-18.04
-            features: experimental
-          - os: ubuntu-20.04
-            features: experimental
+        # exclude:
+        #   # The built-in FSMonitor is not (yet) supported on Linux
+        #   - os: ubuntu-16.04
+        #     features: experimental
+        #   - os: ubuntu-18.04
+        #     features: experimental
+        #   - os: ubuntu-20.04
+        #     features: experimental
     runs-on: ${{ matrix.os }}
 
     env:
