--- a/.github/workflows/scalar-functional-tests.yml
+++ b/.github/workflows/scalar-functional-tests.yml
@@ -1,8 +1,8 @@
 name: Scalar Functional Tests
 
 env:
-  SCALAR_REPOSITORY: microsoft/scalar
-  SCALAR_REF: main
+  SCALAR_REPOSITORY: vdye/scalar
+  SCALAR_REF: bugfix/transient-mac-errors
   DEBUG_WITH_TMATE: false
   SCALAR_TEST_SKIP_VSTS_INFO: true
 
