fixup! release: build unsigned Ubuntu .deb package
Set Ubuntu OS version to 18.04 (rather than "latest" which, at the time of this
commit, is 21.04) for the .deb package build job. This OS version matches the
version used by the Azure DevOps pipeline, and generates artifacts compatible
with 18.04 and 21.04.

--- a/.github/workflows/build-git-installers.yml
+++ b/.github/workflows/build-git-installers.yml
@@ -302,7 +302,7 @@ jobs:
 
   # Build & sign Ubuntu package
   ubuntu_build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: prereqs
     steps:
       - name: Install git dependencies
