fixup! fixup! release: create initial Windows installer build workflow
Signed-off-by: Derrick Stolee <dstolee@microsoft.com>

--- a/.github/workflows/build-git-installers.yml
+++ b/.github/workflows/build-git-installers.yml
@@ -190,10 +190,10 @@ jobs:
           b=/usr/src/build-extra &&
 
           filename=$b/git-update-git-for-windows.config
-          tr % '\t' >$filename <<-\EOF
+          tr % '\t' >$filename <<-\EOF &&
           [update]
           %fromFork = microsoft/git
-          EOF &&
+          EOF
 
           sed -i -e '/^#include "file-list.iss"/a\
           Source: {#SourcePath}\\..\\'$filename'; DestDir: {app}\\mingw64\\bin; Flags: replacesameversion; AfterInstall: DeleteFromVirtualStore' \
